# ml-tech-assessment

./: .env copy.example  .gitignore  README.md  pyproject.toml
app/: configurations.py  prompts.py
app/adapters/: mock.py
app/server/: README.md  dependencies.py  main.py  models.py  service.py  storage.py
